lambda-appsync-proc/tests/fail/invalid_return_type.stderr
error[E0308]: mismatched types
 --> tests/fail/invalid_return_type.rs:6:1
  |
6 | #[appsync_operation(query(players))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<String, AppsyncError>`, found `Result<Vec<Player>, AppsyncError>`
  |
  = note: expected enum `Result<std::string::String, AppsyncError>`
             found enum `Result<Vec<Player>, AppsyncError>`
